crates/toml_edit/tests/fixtures/invalid/key/without-value-2.stderr
TOML parse error at line 1, column 7
  |
1 | key = 
  |       ^
Invalid string
Expected `"`, `'`
